--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,17 @@ uuid = "80df29ba-1703-46ee-8eda-073de5cb7e93"
 authors = ["Yutaka Masuda"]
 version = "0.1.0"
 
+[deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
+PedigreeBase = "9e3bf72a-84c4-4798-98fd-c28eed5cded1"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SparseMatrixDicts = "5cb6c4b0-9b79-11e8-24c9-f9621d252589"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+
 [compat]
 julia = "1.7"
 
